--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mlz/pack",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "mlz-pack",
   "main": "./src/index.js",
   "bin": {
@@ -121,11 +121,12 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.6.2",
     "url-loader": "^2.2.0",
-    "webpack": "^4.41.2",
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
-    "worker-loader": "^2.0.0"
+    "worker-loader": "^2.0.0",
+    "react-refresh": "0.14.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.11"
   }
 }
