--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@mlz/imagemin-mozjpeg": "^8.0.1",
     "@mlz/imagemin-optipng": "^7.1.1",
     "@mlz/imagemin-webpack": "^5.1.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
     "@sentry/webpack-plugin": "^1.15.1",
     "@svgr/webpack": "^4.3.3",
     "autodll-webpack-plugin": "^0.4.2",
@@ -94,6 +95,7 @@
     "babel-plugin-react-css-modules": "^5.2.6",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
+    "code-inspector-plugin": "0.4.1",
     "commander": "^3.0.1",
     "copy-webpack-plugin": "^5.0.4",
     "core-js": "^3.4.5",
@@ -111,6 +113,7 @@
     "postcss-pxtorem": "^4.0.1",
     "postcss-scss": "^2.0.0",
     "progress-bar-webpack-plugin": "^1.12.1",
+    "react-refresh": "0.14.0",
     "sass": "^1.24.2",
     "sass-loader": "^8.0.0",
     "speed-measure-webpack-plugin": "^1.3.1",
@@ -125,8 +128,6 @@
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
-    "worker-loader": "^2.0.0",
-    "react-refresh": "0.14.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.11"
+    "worker-loader": "^2.0.0"
   }
 }
